# pix2gltfr

./: .gitignore  README.md  package-lock.json  package.json  pic.gltf  pic_1.gltf  template_report.json
docs/: index.html  mvp.e95b3f76.css  mvp.e95b3f76.css.map  src.4ce32a52.js
src/: app.ts  app.tsx  index.html  index.js
src/pix2gltfr/: .gitignore  Cargo.toml  Cargo.toml.d.ts
src/pix2gltfr/src/: lib.rs
